--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -47,7 +47,6 @@
                                     </stackView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="c2s-y3-mXL" userLabel="Preview Image">
                                         <rect key="frame" x="0.0" y="43.666666666666657" width="335" height="502.66666666666674"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="c2s-y3-mXL" secondAttribute="height" multiplier="2:3" id="7e0-y4-J49"/>
                                         </constraints>
@@ -56,16 +55,16 @@
                                         <rect key="frame" x="0.0" y="566.33333333333337" width="335" height="74.666666666666629"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 9?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csq-Nc-5OG" userLabel="Question Label">
-                                                <rect key="frame" x="40" y="9.9999999999999964" width="255" height="54.666666666666657"/>
+                                                <rect key="frame" x="40" y="0.0" width="255" height="69.666666666666671"/>
                                                 <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                                 <color key="textColor" name="ypWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="csq-Nc-5OG" firstAttribute="top" secondItem="ddK-th-uZa" secondAttribute="top" constant="10" id="LuY-Ib-0wF"/>
+                                            <constraint firstItem="csq-Nc-5OG" firstAttribute="top" secondItem="ddK-th-uZa" secondAttribute="top" id="LuY-Ib-0wF"/>
                                             <constraint firstItem="csq-Nc-5OG" firstAttribute="leading" secondItem="ddK-th-uZa" secondAttribute="leading" constant="40" id="S8b-SC-HtZ"/>
-                                            <constraint firstAttribute="bottom" secondItem="csq-Nc-5OG" secondAttribute="bottom" constant="10" id="VAf-wb-NVg"/>
+                                            <constraint firstAttribute="bottom" secondItem="csq-Nc-5OG" secondAttribute="bottom" constant="5" id="VAf-wb-NVg"/>
                                             <constraint firstAttribute="trailing" secondItem="csq-Nc-5OG" secondAttribute="trailing" constant="40" id="j5w-AS-A75"/>
                                         </constraints>
                                     </view>
@@ -116,10 +115,15 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="AGN-bg-bJa">
+                                <rect key="frame" x="177.66666666666666" y="396" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="ypBlack"/>
                         <constraints>
+                            <constraint firstItem="AGN-bg-bJa" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="53Z-Om-MF4"/>
+                            <constraint firstItem="AGN-bg-bJa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CCe-pI-eUZ"/>
                             <constraint firstItem="92E-hE-Spn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="f6T-F5-bBc"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="92E-hE-Spn" secondAttribute="trailing" constant="20" id="myF-e8-Dd9"/>
                             <constraint firstItem="92E-hE-Spn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="pTh-6m-wB9"/>
@@ -127,6 +131,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="AGN-bg-bJa" id="B9h-kO-JYi"/>
                         <outlet property="counterLabel" destination="52d-TC-fbe" id="xMM-mE-bRq"/>
                         <outlet property="imageView" destination="c2s-y3-mXL" id="ANo-87-hPr"/>
                         <outlet property="noButtonOutlet" destination="gCh-7A-VMv" id="xOJ-fB-hAg"/>
